<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.nellymakeup.ui.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_user"
        android:name="com.example.nellymakeup.ui.fragments.UserFragment"
        android:label="@string/menu_user"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/nav_order"
        android:name="com.example.nellymakeup.ui.fragments.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_order" />
</navigation>