<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.DetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_detail_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:elevation="4dp"
                android:src="@drawable/ic_black_color_back_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_product_detail_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/product_detail_image_height"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.example.nmkup.utils.MSPTextViewBold
                android:id="@+id/tv_product_details_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/product_details_title_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_product_details_price"
                tools:text="Product Title" />

            <com.example.nmkup.utils.MSPTextView
                android:id="@+id/tv_product_details_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/product_details_price_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_product_detail_image"
                tools:text="$100" />

            <com.example.nmkup.utils.MSPTextViewBold
                android:id="@+id/tv_product_details_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/product_details_label_margin"
                android:textColor="@color/textColorPrimary"
                android:text="@string/lbl_product_description"
                android:textSize="@dimen/product_details_label_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_product_details_title" />

            <com.example.nmkup.utils.MSPTextView
                android:id="@+id/tv_product_details_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/product_details_label_margin"
                android:layout_marginEnd="@dimen/product_details_label_margin"
                android:textSize="@dimen/product_details_description_textSize"
                android:textColor="@color/textColorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_product_details_label"
                tools:text="This is product details description." />

            <LinearLayout
                android:id="@+id/ll_product_details_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/product_details_label_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_product_details_description">

                <com.example.nmkup.utils.MSPTextViewBold
                    android:id="@+id/tv_product_details_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/product_details_stock_quantity_paddingStartEnd"
                    android:text="@string/lbl_product_details_stock_quantity"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/product_details_label_textSize" />

                <com.example.nmkup.utils.MSPTextView
                    android:id="@+id/tv_product_details_available_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/product_details_stock_quantity_paddingStartEnd"
                    android:paddingTop="@dimen/product_details_stock_quantity_paddingTopBottom"
                    android:paddingEnd="@dimen/product_details_stock_quantity_paddingStartEnd"
                    android:paddingBottom="@dimen/product_details_stock_quantity_paddingTopBottom"
                    android:textSize="@dimen/product_details_stock_quantity_textSize"
                    android:textStyle="bold"
                    android:background="@drawable/item_grey_border_background"
                    tools:text="5" />
            </LinearLayout>


            <Button
                android:id="@+id/btn_add_to_cart"
                style="@style/Widget.Shrine.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_padding"
                android:paddingBottom="@dimen/btn_padding"
                android:text="@string/btn_lbl_add_to_cart"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_product_details_quantity"
                tools:visibility="visible" />

            <Button
                android:id="@+id/btn_go_to_cart"
                style="@style/Widget.Shrine.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_padding"
                android:paddingBottom="@dimen/btn_padding"
                android:text="@string/btn_lbl_go_to_cart"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_add_to_cart"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>